Update NGINX configuration

--- a/resources/nginx/index.html
+++ b/resources/nginx/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<title>Test NGINX passed</title>
+	<title>AAA/title>
 </head>
 <body>
-<h1>NGINX is working</h1>
+<h1>aaa</h1>
 </body>
 </html>
